turmites.lessons.turmites.langtoncolors.LangtonColors.scala.error
LangtonsAnt:14: error: ')' expected but ';' found.
	setCouleurSol(colors((I+1)%colors.length));
                                                  ^